# CubeSat-CRD-public

./: .gitignore  LICENSE  conda-env.yml
B1/.cache/clangd/index/: PrimaryGeneratorAction.cc.A2CA2CED2FC43CC7.idx  PrimaryGeneratorAction.hh.7B13819F4F3A31AF.idx  SteppingAction.hh.858543E49EA12235.idx  exampleB1.cc.0445DAA4D8409707.idx
CR-Binning/: data.csv  data_processed.csv  histogram.ipynb
CRD/: CMakeLists.txt
CRD-02-08/: CMakeLists.txt  exampleB1.cc  recompile.sh
CRD-02-08/.cache/clangd/index/: ActionInitialization.cc.73BB2771E018DFE9.idx  ActionInitialization.hh.029C7DAB86349CB0.idx  DetectorConstruction.cc.4A001CDD5BFA454C.idx  DetectorConstruction.hh.1B309000098A7256.idx  DetectorConstructionOld.cc.B9EF0B6845F81EEE.idx  EventAction.cc.A91BF30B60F24131.idx  EventAction.hh.29BC27A225B56FB9.idx  PrimaryGeneratorAction.cc.2417EC31CD65E4BC.idx  PrimaryGeneratorAction.hh.B8A160B09561EAEF.idx  RunAction.cc.DAC1A10E2E052B4B.idx  RunAction.hh.D50FD242B44C7905.idx  SteppingAction.cc.0ABA6214F5944F88.idx  SteppingAction.hh.ED0EB04AFECE1C1D.idx  exampleB1.cc.7F3AB818AEDDADF7.idx
CRD-02-08/include/: DataLogger.hh  DetectorConstruction.hh  EventAction.hh  RunAction.hh  SiPMSD.hh  SteppingAction.hh
CRD-02-08/src/: ActionInitialization.cc  DataLogger.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiPMSD.cc  SteppingAction.cc
geant4-try/: CMakeLists.txt
geant4-try/.cache/clangd/index/: main.cpp.7C6447C3745B8925.idx
geant4-try/src/: main.cpp
proton_dist/: code.ipynb  proton_dist.csv  proton_dist2.csv
(+22 files in other folders)
